--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <h3 id="summaryText" class="text-xl font-bold text-slate-200">1 USD = 309.45 LKR</h3>
                     </div>
                     <p class="text-[10px] text-slate-500 font-medium mt-4 md:mt-0 uppercase tracking-widest">
-                        Updated: Jan 2026
+                        Updated: Jan 17, 2026
                     </p>
                 </div>
             </section>
@@ -207,4 +207,5 @@
         window.onload = setup;
     </script>
 </body>
+
 </html>
